--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon ./index.js --exec babel-node",
-    "api-secret" : "node ./generate-key.js" 
+    "api-secret": "node ./generate-key.js"
   },
   "author": "Rudianto",
   "license": "ISC",
@@ -14,6 +14,7 @@
     "body-parser": "^1.20.2",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-group-routes": "^1.1.0",
     "generate-api-key": "^1.0.2",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.4",
